# orquestra-core

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: coverage.yml  publish_docs.yml  publish_release.yml  style.yml
_sources/: index.rst.txt
_sources/api/: index.rst.txt
_sources/api/opt/: index.rst.txt
_sources/api/orquestra/: index.rst.txt
_sources/api/quantum/: index.rst.txt
_sources/api/vqa/: index.rst.txt
_sources/guides/: circuits.rst.txt  index.rst.txt  interfaces.rst.txt  optimizers.rst.txt
_sources/guides/vqa_guide/: index.rst.txt
_sources/quantum/: index.rst.txt
_sources/quantum/guides/: index.rst.txt
_sources/tutorials/: beginner_tutorial.rst.txt  contributing.rst.txt  index.rst.txt  integrations.rst.txt  orq_core_structure.rst.txt
api/: index.html
api/integrations/: index.html
api/integrations/cirq/: index.html
api/integrations/forest/: index.html
api/integrations/qiskit/: index.html
api/integrations/qulacs/: index.html
api/opt/: index.html
api/opt/api/: index.html
api/opt/bqm/: index.html
api/opt/convex/: index.html
api/opt/cost_function_augmentations/: index.html
api/opt/gradients/: index.html
api/opt/history/: index.html
api/opt/mock_objects/: index.html
api/opt/optimizers/: index.html
api/opt/problems/: index.html
api/orquestra/: index.html
api/orquestra/integrations/: index.html
api/orquestra/opt/: index.html
api/orquestra/quantum/: index.html
api/orquestra/vqa/: index.html
api/quantum/: index.html
api/quantum/api/: index.html
api/quantum/circuits/: index.html
api/quantum/decompositions/: index.html
api/quantum/distributions/: index.html
api/quantum/estimation/: index.html
api/quantum/evolution/: index.html
api/quantum/measurements/: index.html
api/quantum/openfermion/: index.html
api/quantum/operators/: index.html
api/vqa/: index.html
docs/: DOC_README.md  Makefile  conf.py  getting_started.rst  index.rst  requirements.txt
docs/examples/: backends_guide.py  bell_state.py  circuit_runners_guide.py  circuits_guide.py  estimation.py  estimators_guide.py  expectation_values.py  interfaces_guide.py  mock_ansatz.py  qaoa_maxcut.py  superdense_coding.py  test_ansatz.py
docs/guides/:  circuits.rst  backends.rst  circuit_runners.rst  circuits.rst  cost_function.rst  index.rst  interfaces.rst  optimizers.rst  orq_core_structure.rst
docs/quantum/: index.rst
docs/recipes/: dwave-qubo.rst  index.rst  vqe.rst
docs/repos/: manifest.json
docs/tutorials/: basic_qaoa.rst  beginner_tutorial.rst  contributing.rst  creating_ciruits.rst  index.rst  install.rst  integrations.rst  interfaces.rst  orq_core_structure.rst  orqviz.rst  running_circuits.rst  translating_circuits.rst
guides/: backends.html  circuit_runners.html  circuits.html  contributing.html  cost_function.html  index.html  interfaces.html  optimizers.html  orq_core_structure.html
guides/vqa_guide/: ansatzes.html  estimators.html  index.html  introduction.html  structure.html
quantum/: index.html
quantum/guides/: circuit_runners.html  circuits.html  contributing.html  index.html  interfaces.html  optimizers.html
quantum/tutorials/: basic_qaoa.html  beginner_tutorial.html  index.html  orqviz.html
src/: dummy.py
subtrees/z_quantum_actions/: Makefile  setup_extras.py
tests/: basic_circuit_test.py  fh_vqe_test.py  qaoa_maxcut_test.py  qcbm.py  qcbm_test.py
tutorials/: basic_qaoa.html  beginner_tutorial.html  contributing.html  index.html  integrations.html  orq_core_structure.html
workflow-templates/: publish-release.yml
(+1859 files in other folders)
