[metadata]
name = orquestra-python-template
description = "Orquestra Python Template package"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-python-template
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = <INSERT LICENSE APPROPRIATE LICENSE HERE>
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    numpy>=1.20
    scipy>=1.4.1
    sympy>=1.5,<=1.9


[options.packages.find]
where = src

[options.extras_require]
dev =
    black~=22.3
    flake8~=3.9.0
    isort~=5.9.0
    mypy~=0.910
    pytest~=6.2
    pytest-cov>=2.12

[flake8]
ignore = E203,E266,F401,W605
max-line-length = 88
