[metadata]
name = orquestra-core
description = "Orquestra Core meta-package"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-core
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    orquestra-quantum==0.12.0
    orquestra-opt==0.9.0
    orquestra-vqa==0.9.0
    orquestra-sdk>=0.42.0



[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
    orquestra-opt[all]
    orquestra-cirq[qsim]
    orquestra-qiskit==0.13.0
    orquestra-qulacs==0.8.0
    orquestra-cirq==0.11.0
    orquestra-braket==0.4.0
    orquestra-sdk[all]>=0.42.0
    orqviz==0.6.0
    icecream

qulacs =
    orquestra-qulacs==0.8.0

qiskit =
    orquestra-qiskit==0.13.0

cirq =
    orquestra-cirq==0.11.0

braket =
    orquestra-braket==0.4.0

forest =
    orquestra-forest==0.6.0

all =
    orquestra-opt[all]==0.9.0
    orquestra-cirq[qsim]==0.11.0
    orquestra-qiskit==0.13.0
    orquestra-qulacs==0.8.0
    orquestra-cirq==0.11.0
    orquestra-braket==0.4.0
    orquestra-sdk[all]>=0.42.0
    orqviz==0.6.0

orqviz =
    orqviz==0.6.0

[flake8]
ignore = E203,E266,F401,W605
max-line-length = 88
